--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=3000
 DB_URI=mongodb+srv://fernando:fernando@nodecloster.qfhlo.mongodb.net/dbnode?retryWrites=true&w=majority
+PUBLIC_URL=http://localhost:3001
